--- a/index.css
+++ b/index.css
@@ -1,11 +1,51 @@
-body{
-    background-color: rgb(178, 174, 174)
+.nav{
+    padding: 10px;
+    display: flex;
+    align-items: space-between;
+    justify-content: space-between;
+    border: 2px solid black;
+    font-size: 24px;
 }
-h2{
-    color: green;
-    text-align: center;
+.nav > img{
+    width: 150px;
+    height: 80px;
 }
-h1{
-    color: red;
-    text-align : center;
+.nav > ul{
+    display: flex;
+    list-style-type: none;
+}
+.nav > ul > li{
+    margin: 0px 10px;
+}
+.search{
+    padding: 4px 10px;
+    margin: 5px;
+    font-size: 16px;
+    border: 1px solid black;
+    width: 20%;
+    border-radius: 15px;
+    outline-style:none;
+    
+}
+.res-card-container{
+    margin: 5px;
+    padding: 5px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 5px;
+}
+.res-card{
+    width: 200px;
+    /* height: 300px; */
+    background-color:rgb(255, 219, 219);
+    padding: 5px;
+    border-radius: 15px;
+    cursor: pointer;
+}
+.res-card:hover{
+    border: 1px solid black;
+}
+.res-card > img{
+    width: 100%;
+    border-radius: 15px;
 }
