--- a/index.css
+++ b/index.css
@@ -31,21 +31,25 @@
     margin: 5px;
     padding: 5px;
     display: flex;
+
     flex-wrap: wrap;
     gap: 5px;
+    justify-content: space-evenly;
 }
 .res-card{
-    width: 200px;
+    width: 270px;
     /* height: 300px; */
     background-color:rgb(255, 219, 219);
     padding: 5px;
     border-radius: 15px;
     cursor: pointer;
 }
+
 .res-card:hover{
     border: 1px solid black;
 }
 .res-card > img{
     width: 100%;
+    height: 50%;
     border-radius: 15px;
 }
