--- a/index.css
+++ b/index.css
@@ -17,15 +17,21 @@
 .nav > ul > li{
     margin: 0px 10px;
 }
-.search{
-    padding: 4px 10px;
+/* .search{ */
+    /* padding: 4px 10px;
     margin: 5px;
     font-size: 16px;
     border: 1px solid black;
     width: 20%;
     border-radius: 15px;
-    outline-style:none;
-    
+    outline-style:none; */
+/* } */
+.search-btn{
+    padding: 4px 10px;
+    margin: 5px;
+    cursor: pointer;
+    border-radius: 15px;
+
 }
 .res-card-container{
     margin: 5px;
