--- a/index.css
+++ b/index.css
@@ -26,6 +26,10 @@
     border-radius: 15px;
     outline-style:none; */
 /* } */
+.filter{
+    display: flex;
+    justify-content: space-between;
+}
 .search-btn{
     padding: 4px 10px;
     margin: 5px;
@@ -81,4 +85,11 @@
     width: 100%;
     height: 50%;
     border-radius: 15px;
+}
+.no-rest-message{
+    text-align: center;
+    vertical-align: center;
+    color: rgb(51, 48, 48);
+    font-size: 24px;
+    padding: 80px;
 }
